--- a/templates/home.html
+++ b/templates/home.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SEAREQ - Home</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../static/css/style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 <body>
@@ -27,7 +27,7 @@
 
     <section class="home">
         <div class="content">
-            <img src="img/bg-home.png" alt="">
+            <img src="../static/img/bg-home.png" alt="">
 
             <h1>
                 <span>SEA</span>rch for Stakeholder <span>REQ</span>uirements for Your Major
@@ -56,6 +56,6 @@
         </div>
     </section>
 
-    <script src="js/autocomplete.js"></script>
+    <script src="../static/js/autocomplete.js"></script>
 </body>
 </html>
