Update Routing and Faq

--- a/templates/faq.html
+++ b/templates/faq.html
@@ -89,7 +89,7 @@
 
         .faq {
             background-color: #F7FAFF;
-            height: 100vh;
+       
 
         }
 
@@ -194,30 +194,30 @@
             <div class="part">
                 <div class="question">
                     <h2>Q</h2>
-                    <P>lorem ipsum</P>
+                    <P>Bagaimana cara saya menggunakan website ini</P>
                 </div>
 
                 <div class="answer">
                     <h2>A</h2>
-                    <P>lorem ipsum</P>
+                    <P>Mekanisme penggunaan website SEAREQ dapat digunakan dengan memasukkan jurusan yang diinginkan. Kemudian sistem kami akan menampilkan requirement jurusan tersebut yang relevan dengan Industri saat ini</P>
                 </div>
                 <div class="question">
                     <h2>Q</h2>
-                    <P>lorem ipsum</P>
+                    <P>Apakah semua jurusan bisa melakukan pencarian</P>
                 </div>
 
                 <div class="answer">
                     <h2>A</h2>
-                    <P>lorem ipsum</P>
+                    <P>Tentu saja, Ayo temukan kebutuhan yang perlu kamu asah sedini mungkin</P>
                 </div>
                 <div class="question">
                     <h2>Q</h2>
-                    <P>lorem ipsum</P>
+                    <P>Apakah data yang ditampilkan up-to-date dengan kebutuhan saat ini</P>
                 </div>
 
                 <div class="answer">
                     <h2>A</h2>
-                    <P>lorem ipsum</P>
+                    <P>SEAREQ pasti dan akan terus berkomitmen untuk melakukan pembaharuan bagi setiap jurusannya</P>
                 </div>
 
             </div>
