--- a/templates/home.html
+++ b/templates/home.html
@@ -9,16 +9,16 @@
 </head>
 <body>
     <header>
-        <a href="home.html" class="logo">SEAREQ</a>
+        <a href="./" class="logo">SEAREQ</a>
 
         <nav class="navbar">
             <div class="menus">
-                <a href="about.html">About</a>
-                <a href="faq.html">FAQ</a>
+                <a href="./about">About</a>
+                <a href="./faq">FAQ</a>
             </div>
 
             <div class="icon">
-                <a href="search.html">
+                <a href="./output">
                     <span class="material-symbols-outlined">search</span>
                 </a>
             </div>
