--- a/templates/about.html
+++ b/templates/about.html
@@ -14,7 +14,7 @@ about
 
 <body>
     <header>
-        <a href="index" class="logo">SEAREQ</a>
+        <a href="./" class="logo">SEAREQ</a>
 
         <nav class="navbar">
             <div class="menus">
