--- a/static/css/about.css
+++ b/static/css/about.css
@@ -15,6 +15,10 @@
     font-family: 'Roboto', sans-serif;
     color: var(--black);
 }
+body{
+    overflow: hidden;
+
+}
 /* Navbar */
 header {
     z-index: 1000;
@@ -84,7 +88,7 @@ header .navbar .icon .material-symbols-outlined:hover {
 
 .cas{
   position: absolute;
-  right: -220px;  
+  right: 10px;  
   height: 50px;
   width: 35px;
   display: flex;
@@ -100,19 +104,20 @@ h3{
   margin-left: 20px;
   font-size:12px;
 }
-
+/* 
 .swiper{
   right: 0;
   height: 400px;
   width: 800px;
-}
+} */
 
 .card{
   position: relative;
   background: #fff;
   border-radius: 20px;
-  height: 200px;
-  margin: 20px 0;
+  height: 100px;
+  width: 350px;
+  margin: 12px 0px;
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
 
 }
@@ -156,15 +161,14 @@ h3{
   border-radius: 100%;
   border: 3px solid #fff;
 }
-  
+
 /* Page */
 
 .element {
     background-color: #F7FAFF;
     height: 100vh;
- 
+    overflow: hidden;
 }
-
 
 #back {
     position: absolute;
@@ -172,13 +176,13 @@ h3{
     bottom: 0px;
     height: 480px;
     object-fit: cover;
+    pointer-events: none;
 }
 
 .about {
     position: absolute;
-    top: 100px;
-    right: 0;
-    
+    top: 80px;
+    right: 150px;
     flex: 2;
     background-color: transparent;
 }
@@ -199,3 +203,24 @@ h3{
     font-family: 'Righteous', cursive;
     background-color: transparent;
 }
+
+.mySwiper {
+  width: 110%; 
+  margin: auto; 
+  height: 320px;
+  top:-10%;
+}
+
+.swipe{
+  padding-top: 4px;
+  padding-right: 4px;
+  text-align: right; 
+  position: relative;
+  color: rgba(0, 0, 0, 0.50); 
+  font-size: 12px; 
+  font-family: Helvetica; 
+  font-weight: 400; 
+  word-wrap: break-word;
+  padding-bottom: 10px;
+}
+
