--- a/templates/output.html
+++ b/templates/output.html
@@ -15,10 +15,11 @@
       <a href="home.html" class="logo">SEAREQ</a>
 
         <nav class="navbar">
-            <div class="menus">
-                <a href="#about">About</a>
-                <a href="#faq">FAQ</a>
-            </div>
+          <div class="menus">
+            <a href="major">Major</a>
+            <a href="about">About</a>
+            <a href="faq">FAQ</a>
+        </div>
 
             <div class="icon">
                 <a href="search.html">
