--- a/templates/search.html
+++ b/templates/search.html
@@ -21,7 +21,7 @@
 
             <div class="result-box">
                 <ul>
-                    <a href="ppl_coba.html"><li>information system</li></a>
+                    <a href="output"><li>information system</li></a>
                     <li>information management</li>
                     <li>information system management</li>
                 </ul>
