--- a/templates/about.html
+++ b/templates/about.html
@@ -1,4 +1,4 @@
-about
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -14,10 +14,11 @@ about
 
 <body>
     <header>
-        <a href="" class="logo">SEAREQ</a>
+        <a href="./" class="logo">SEAREQ</a>
 
         <nav class="navbar">
             <div class="menus">
+                <a href="major">Major</a>
                 <a href="about">About</a>
                 <a href="faq">FAQ</a>
             </div>
@@ -36,13 +37,12 @@ about
         <div class="cas">
             <div class="about">
                 <h1><span>Our</span><br>Developer</h1>
-
                 <div class="swiper mySwiper container">
                     <div class="swiper-wrapper content">
                         <div class="swiper-slide card" id="c1">
                             <div class="card-content">
                                 <div class="image">
-                                    <img src="static/img/banner-img.jpg" alt="">
+                                    <img src="static/img/fandi.jpg" alt="">
                                 </div>
                                 <div class="name-profession">
                                     <h2>Achmad Affandi F. (Project Leader)</h2>
@@ -53,7 +53,7 @@ about
                         <div class="swiper-slide card" id="c2">
                             <div class="card-content">
                                 <div class="image">
-                                    <img src="static/img/banner-img.jpg" alt="">
+                                    <img src="static/img/coki.jpg" alt="">
                                 </div>
                                 <div class="name-profession">
                                     <h2>Coki Rofin Martogi Nababan</h2>
@@ -64,7 +64,7 @@ about
                         <div class="swiper-slide card" id="c2">
                             <div class="card-content">
                                 <div class="image">
-                                    <img src="static/img/banner-img.jpg" alt="">
+                                    <img src="static/img/asraf.jpg" alt="">
                                 </div>
                                 <div class="name-profession">
                                     <h2>Asraf Ayyasi Putra</h2>
@@ -75,7 +75,7 @@ about
                         <div class="swiper-slide card" id="c2">
                             <div class="card-content">
                                 <div class="image">
-                                    <img src="static/img/banner-img.jpg" alt="">
+                                    <img src="static/img/nur.jpg" alt="">
                                 </div>
                                 <div class="name-profession">
                                     <h2>Nur Syamsiana</h2>
@@ -86,7 +86,7 @@ about
                         <div class="swiper-slide card" id="c2">
                             <div class="card-content">
                                 <div class="image">
-                                    <img src="static/img/banner-img.jpg" alt="">
+                                    <img src="static/img/figo.jpg" alt="">
                                 </div>
                                 <div class="name-profession">
                                     <h2>Mohammad Figo Yushistira W</h2>
@@ -97,7 +97,7 @@ about
                         <div class="swiper-slide card" id="c2">
                             <div class="card-content">
                                 <div class="image">
-                                    <img src="static/img/banner-img.jpg" alt="">
+                                    <img src="static/img/isaura.jpg" alt="">
                                 </div>
                                 <div class="name-profession">
                                     <h2>Annisa Isaura Alfiany</h2>
@@ -108,7 +108,7 @@ about
                         <div class="swiper-slide card" id="c2">
                             <div class="card-content">
                                 <div class="image">
-                                    <img src="static/img/banner-img.jpg" alt="">
+                                    <img src="static/img/farid.jpg" alt="">
                                 </div>
                                 <div class="name-profession">
                                     <h2>M. Farid Fatchur Rohmad</h2>
@@ -119,7 +119,7 @@ about
                         <div class="swiper-slide card" id="c2">
                             <div class="card-content">
                                 <div class="image">
-                                    <img src="static/img/banner-img.jpg" alt="">
+                                    <img src="static/img/raffi.jpg" alt="">
                                 </div>
                                 <div class="name-profession">
                                     <h2>Raffi Achmad Riandri</h2>
@@ -130,7 +130,7 @@ about
                         <div class="swiper-slide card" id="c2">
                             <div class="card-content">
                                 <div class="image">
-                                    <img src="static/img/banner-img.jpg" alt="">
+                                    <img src="static/img/alfariza.jpg" alt="">
                                 </div>
                                 <div class="name-profession">
                                     <h2>Muhammad Alfariza Rasendria</h2>
@@ -141,7 +141,7 @@ about
                         <div class="swiper-slide card" id="c2">
                             <div class="card-content">
                                 <div class="image">
-                                    <img src="static/img/banner-img.jpg" alt="">
+                                    <img src="static/img/fauzan.jpg" alt="">
                                 </div>
                                 <div class="name-profession">
                                     <h2>Muhammad Fauzan Ramadhan</h2>
