--- a/templates/home.html
+++ b/templates/home.html
@@ -13,12 +13,13 @@
 
         <nav class="navbar">
             <div class="menus">
-                <a href="./about">About</a>
-                <a href="./faq">FAQ</a>
+                <a href="major">Major</a>
+                <a href="about">About</a>
+                <a href="faq">FAQ</a>
             </div>
 
             <div class="icon">
-                <a href="./output">
+                <a href="search">
                     <span class="material-symbols-outlined">search</span>
                 </a>
             </div>
