--- a/templates/faq.html
+++ b/templates/faq.html
@@ -106,16 +106,15 @@
         }
 
         .faq h1 {
-            color: black;
+            color: var(--black);
             font-size: 40px;
             font-weight: 600;
             position: relative;
-            left: 50%%;
             margin-bottom: 1.75rem;
         }
 
         .faq h1 span {
-            color: blue;
+            color: var(--blue);
             font-size: 40px;
             font-weight: 500;
             font-family: 'Righteous', cursive;
