--- a/templates/major.html
+++ b/templates/major.html
@@ -114,7 +114,7 @@
         }
 
         .faq h1 span {
-            color: blue;
+            color: var(--blue);
             font-size: 40px;
             font-weight: 500;
             font-family: 'Righteous', cursive;
