--- a/templates/output.html
+++ b/templates/output.html
@@ -12,7 +12,7 @@
 
   <body class="bg-sky-50">
     <header>
-      <a href="home.html" class="logo">SEAREQ</a>
+      <a href="./" class="logo">SEAREQ</a>
 
         <nav class="navbar">
           <div class="menus">
@@ -22,7 +22,7 @@
         </div>
 
             <div class="icon">
-                <a href="search.html">
+                <a href="search">
                     <span class="material-symbols-outlined">search</span>
                 </a>
             </div>
