--- a/templates/search.html
+++ b/templates/search.html
@@ -16,7 +16,8 @@
                     <input type="text" id="input-box" placeholder="What is your major" autocomplete="off">
                 </div>
 
-                <button type="reset"><span class="material-symbols-outlined">close</span></button>
+                <!-- <button type="reset"><span class="material-symbols-outlined">close</span></button> -->
+                <a href="./"><span class="material-symbols-outlined">close</span></a>
             </form>
 
             <div class="result-box">
