Edit HTML Halaman Home

--- a/templates/home.html
+++ b/templates/home.html
@@ -40,19 +40,23 @@
             </p>
 
             <div class="sb-container">
+                <a href="search" class="search-box">Search Major</a>
+            </div>
+
+            <!-- <div class="sb-container">
                 <form action="" class="search-box">
                     <button type="submit"><span class="material-symbols-outlined">search</span></button>
-                    <input type="text" id="input-box" placeholder="What is your major" autocomplete="off">
+                    <input type="text" id="input-box" placeholder="What is your major" autocomplete="off"> -->
                     <!-- <button type="reset"><span class="material-symbols-outlined">close</span></button> -->
-                </form>
+                <!-- </form> -->
                 
-                <div class="result-box">
-                    <ul>
+                <!-- <div class="result-box">
+                    <ul> -->
                         <!-- <li>information system</li>
                         <li>information management</li>
                         <li>information system management</li> -->
-                    </ul>
-                </div>
+                    <!-- </ul>
+                </div> -->
             </div>
         </div>
     </section>
