--- a/static/css/style.css
+++ b/static/css/style.css
@@ -136,6 +136,22 @@ header .navbar .icon .material-symbols-outlined:hover{
 
 /* ini batas awal search box home section */
 .home .content .sb-container .search-box{
+    color: var(--main-color);
+    background: var(--blue);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    text-align: center;
+    border: 2px solid #4169E1;
+    border-radius: 22.5px;
+    box-shadow: 1px 1px 2px 0px #A9A9A9;
+    width: 132px;
+    padding: 10px 15px;
+    position: relative;
+    z-index: 1;
+}
+
+/* .home .content .sb-container .search-box{
     background: transparent;
     display: flex;
     justify-content: space-between;
@@ -148,7 +164,7 @@ header .navbar .icon .material-symbols-outlined:hover{
     padding: 7.5px 15px;
     position: relative;
     z-index: 1;
-}
+} */
 
 .home .content .sb-container .search-box button{
     background: transparent;
