--- a/templates/about.html
+++ b/templates/about.html
@@ -1,38 +1,7 @@
+{% extends "partials/base.html" %}
 
-<!DOCTYPE html>
-<html lang="en">
+{% block content %}
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-    <link rel="stylesheet" href="./static/css/swiper.css" />
-    <link rel="stylesheet" href="/static/css/about.css" />
-</head>
-
-<body>
-    <header>
-        <a href="./" class="logo">SEAREQ</a>
-
-        <nav class="navbar">
-            <div class="menus">
-                <a href="major">Major</a>
-                <a href="about">About</a>
-                <a href="faq">FAQ</a>
-            </div>
-
-            <div class="icon">
-                <a href="search">
-                    <span class="material-symbols-outlined">search</span>
-                </a>
-            </div>
-        </nav>
-        
-    </header>
-
-    <div class="element">
         <img src="static/img/About.png" alt="" id="back">
         <div class="cas">
             <div class="about">
@@ -153,10 +122,9 @@
                     <!-- Add Pagination -->
                     <div class="swiper-pagination"></div>
                 </div>
-                <div class="swipe">*Swipe down to see more!</div>
+                <div class="swipe">*Drag down to see more!</div>
             </div>
         </div>
-    </div>
 
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 
@@ -181,8 +149,4 @@
     </script>
 
 
-
-
-</body>
-
-</html>
+{% endblock %}
