--- a/templates/home.html
+++ b/templates/home.html
@@ -1,30 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SEAREQ - Home</title>
-    <link rel="stylesheet" href="../static/css/style.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-</head>
-<body>
-    <header>
-        <a href="./" class="logo">SEAREQ</a>
+{% extends "partials/base.html" %}
 
-        <nav class="navbar">
-            <div class="menus">
-                <a href="major">Major</a>
-                <a href="about">About</a>
-                <a href="faq">FAQ</a>
-            </div>
-
-            <div class="icon">
-                <a href="search">
-                    <span class="material-symbols-outlined">search</span>
-                </a>
-            </div>
-        </nav>
-    </header>
+{% block content %}  
 
     <section class="home">
         <div class="content">
@@ -62,5 +38,4 @@
     </section>
 
     <script src="../static/js/autocomplete.js"></script>
-</body>
-</html>
+    {% endblock %}
