--- a/templates/output.html
+++ b/templates/output.html
@@ -10,7 +10,7 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   </head>
 
-  <body class="bg-sky-50">
+  <body>
     <header>
       <a href="./" class="logo">SEAREQ</a>
 
