HTML Halaman Search

--- a/templates/home.html
+++ b/templates/home.html
@@ -37,5 +37,5 @@
         </div>
     </section>
 
-    <script src="../static/js/autocomplete.js"></script>
+    <!-- <script src="../static/js/autocomplete.js"></script> -->
     {% endblock %}
