--- a/templates/search.html
+++ b/templates/search.html
@@ -37,7 +37,47 @@
 
     <script>
         document.addEventListener('DOMContentLoaded', function () {
-            var majors = ['information system', 'information management', 'information system management'];
+            var majors =
+            // ['information system', 'information management', 'information system management'];
+            ['Kebidanan',
+            'Kedokteran',
+            'Ilmu Hukum',
+            'Akuntansi',
+            'Manajemen',
+            'Ekonomi Pembangunan',
+            'Ekonomi Islam',
+            'Farmasi',
+            'Kedokteran Hewan',
+            'Sosiologi',
+            'Ilmu Komunikasi',
+            'Ilmu Hubungan Internasional',
+            'Ilmu Administrasi',
+            'Antropologi',
+            'Ilmu Informasi dan Perpustakaan',
+            'Ilmu Politik',
+            'Matematika',
+            'Sistem Informasi',
+            'Statistika',
+            'Fisika',
+            'Teknik Biomedis',
+            'Kimia',
+            'Biologi',
+            'Teknik Lingkungan',
+            'Kesehatan Masyarakat',
+            'Ilmu Gizi',
+            'Psikologi',
+            'Ilmu Sejarah',
+            'Sastra Jepang',
+            'Sastra Indonesia',
+            'Sastra Inggris',
+            'Keperawatan',
+            'Akuakultur',
+            'Teknologi Hasil Perikanan',
+            'Teknik Robotika dan Kecerdasan Buatan',
+            'Teknik Elektro',
+            'Teknik Industri',
+            'Rekayasa Nano Teknologi',
+            'Teknologi Sains Data'];
 
             // Memberi fungsi pada event input pada elemen dengan id "input-box"
             document.getElementById('input-box').addEventListener('input', function () {
