--- a/static/css/style.css
+++ b/static/css/style.css
@@ -299,7 +299,26 @@ header .navbar .icon .material-symbols-outlined:hover{
 }
 /* ini batas akhir search section */
 
-
+::-webkit-scrollbar {
+    width: 10px;
+    height: 10px; /* Width of the scrollbar */
+  }
+  
+  ::-webkit-scrollbar-track {
+    background-color: var(--main-color); /* Color of the scrollbar track */
+  }
+  
+  ::-webkit-scrollbar-thumb {
+    background-color: var(--blue); /* Color of the scrollbar handle */
+    border-radius: 6px; /* Rounded corners for the scrollbar handle */
+    border: 1px solid #f1f1f1; /* Border around the scrollbar handle */
+  }
+  
+  ::-webkit-scrollbar-thumb:hover {
+    background-color: #f1f1f1; /* Color of the scrollbar handle */
+    border-radius: 6px; /* Rounded corners for the scrollbar handle */
+    border: 2px solid var(--blue); /* Color of the scrollbar handle on hover */
+  }
 
 /* ini batas awal pengaturan halaman responsif */
 @media (max-width:700px){
