filter search bar

--- a/templates/home.html
+++ b/templates/home.html
@@ -10,9 +10,9 @@
                 <span>SEA</span>rch for Stakeholder <span>REQ</span>uirements for Your Major
             </h1>
 
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                Sed id efficitur libero, vel tincidunt orci.
-                Nullam id bibendum dui, quis vestibulum libero.
+            <p>Want to know more about what qualification need by the industry?
+                Seareq is the perfect platform for you to enhance your skill
+                based on the needs of the industry!
             </p>
 
             <div class="sb-container">
